fix: Text overflowing tooltip

--- a/components/canvas/NodeTooltip.module.scss
+++ b/components/canvas/NodeTooltip.module.scss
@@ -4,8 +4,6 @@
   background: white;
   max-width: 300px;
   box-shadow: 0px 11px 15px 0px #00000033;
-  white-space: pre-wrap;
-  overflow-wrap: break-word;
   border-radius: 2.5%;
 }
 
