--- a/components/canvas/NodeTooltipSection.module.scss
+++ b/components/canvas/NodeTooltipSection.module.scss
@@ -1,3 +1,6 @@
 .container {
   padding: 10px 20px;
+  overflow: hidden;
+  white-space: pre-wrap;
+  overflow-wrap: break-word;
 }
